--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@better-scroll/core": "^2.4.2",
     "axios": "^0.27.2",
+    "better-scroll": "^2.4.2",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
